AC_PREREQ(2.50)

AC_INIT(meshmagick, 0.5.2)
AC_CANONICAL_TARGET
#AM_INIT_AUTOMAKE([1.6.1 foreign no-installinfo no-installman])
AM_INIT_AUTOMAKE([meshmagick], 0.5.2)

dnl Check for programs
AC_LANG([C++])
AC_PROG_CXX
AC_PROG_INSTALL
AM_PROG_LIBTOOL


# ***** DEBUGGING
AC_ARG_ENABLE(debug,AS_HELP_STRING([--enable-debug],[enable debugging @<:@default=no@:>@]))
if test "$enable_debug" = "yes"; then
    CXXFLAGS="$CXXFLAGS -g -O0 -DDEBUG"
else
    CXXFLAGS="$CXXFLAGS -O2 -DNDEBUG -s"
fi

# Pthreads
CXXFLAGS="$CXXFLAGS -pthread"

# Ogre
PKG_CHECK_MODULES([OGRE], [OGRE >= 1.6.0])
AC_ARG_WITH([ogre-plugins], [AS_HELP_STRING([--with-ogre-plugins=@<:@=DIR@:>@], [set location of Ogre plugins])] ,[OGRE_PLUGINDIR="$withval"], [OGRE_PLUGINDIR=`pkg-config OGRE --variable=plugindir`])
AC_SUBST(OGRE_PLUGINDIR)


dnl Create the makefiles
AC_CONFIG_FILES([Makefile include/Makefile src/Makefile meshmagick.pc])

AC_OUTPUT


dnl Show a summary about important directories
echo
echo "**********************************************"
echo "* Meshmagick - Configuration Results Summary *"
echo "**********************************************"
echo
echo " Code options:"
echo "       Building Meshmagick in debug mode:          ${enable_debug-no}"
echo
echo
echo "Type make && make install and pray!"
